# cloud-2021

./: .gitignore  README.rst  pyproject.toml
predavanja/: pred-01.rst  pred-02.rst  pred-03.rst  pred-04.rst  pred-05.rst  pred-06.rst  pred-07.rst  pred-08.rst  pred-09-use-case.ods  pred-09.rst  pred-10.rst  pred-11.rst  pred-12.rst
visits/: admin.py  models.py  views.py
visits/migrations/: 0001_initial.py  0002_add_indexes_and_meta.py
webapp/: settings.py  urls.py
