[tool.poetry]
name = "webapp"
version = "2021.0"
description = "webapp demo for cloud computing predavanja"
authors = ["Petar Marić <petar.maric@gmail.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.8"

Django = "~3.2.0"

[tool.poetry.dev-dependencies]
ipython = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
